﻿1.0.0
=====

New Features:

  * Add an option to specify a "shared file repository" from the Special:Admin
    page.  If set, then any virtual wiki will be able to access images from the
    specified virtual wiki.
  * Refactor Special:OrphanedPages to vastly improve speed & scalability.
  * Use the database rather than the search engine to generate results for the
    Special:LinkTo page.
  * Remove ability to automatically upgrade from versions prior to 0.8.0.
  * Upgrade to Spring Framework 3.0.3.RELEASE.
  * Upgrade to Spring Security 3.0.3.RELEASE.
  * Upgrade to Ehcache 2.1.0.
  * Upgrade to Lucene Search 3.0.2.


0.9.0
=====

New Features:

  * Signficant updates to the syntax parser, including support for additional
    HTML tags and XHTML transitional validation of tag attributes.
  * New Special:VirtualWiki page for administering virtual wikis and
    namespaces, including the ability to configure translated / alternate
    namespaces and to change the default virtual wiki from "en".
  * Support the #if: and the #ifeq parser functions.  Usage:
    "{{#if: test | true | false}}" and "{{#ifeq: 1 | 2 | true | false}}".
  * Basic support for the #expr: parser function.  Only basic operations are
    supported (+, -, /, *) and parentheses must be used to ensure that the
    order of operations is followed.
  * Support added for the {{ns:}} and {{nse:}} parser functions.
  * Support Mediawiki's {{subst:}} syntax.  Usage: {{subst:template}}.
  * Support added for the __NOEDITSECTION__ behavior switch.
  * Support added for the {{NUMBEROFARTICLES}}, {{REVISIONUSER}} and
    {{REVISIONID}} magic words.
  * Add the ability for sysadmins to create user accounts (hanspeterklapf).
  * Topic add/update is now significantly faster due to query refactoring
    and changes so that the search index is not re-optimized after every
    add/update.
  * Topic history retrieval speed improved by a factor of up to 100x for