@@ -1,5 +1,6 @@
 <table>
 <tr>
-<td><a name="test"></a><h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading7&amp;section=1">Edit</a>]</span><span>test</span></h2></td>
+<td><a name="test"></a><h2><span class="editsection">[<a href="/wiki/en/Special:Edit?topic=Heading7&amp;section=1">Edit</a>]</span><span>test</span></h2>
+</td>
 </tr>
 </table>
